// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should match snapshot 1`] = `
<t-card>
  <mock:shadow-root>
    <div class="card">
      <div class="card__body">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Label
</t-card>
`;

exports[`Card should match snapshot with image 1`] = `
<t-card image-top="http://placehold.it/400x300">
  <mock:shadow-root>
    <div class="card">
      <img alt="" class="card__img-top" src="http://placehold.it/400x300">
      <div class="card__body">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  A title
</t-card>
`;
